<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Treasure Hunt</string>
    <string name="action_logout">Logout</string>
    <string name="home_title">Welcome back,</string>
    <string name="continue_title">Continue games!</string>
    <string name="new_title">New games!</string>
	<string name="logo">TreasureHunt</string>
	<string name="mail">Your email</string>
	<string name="psw">Password</string>
	<string name="rePsw">Your password again</string>
	<string name="b_login">Sign in!</string>
	<string name="b_register">Sign up!</string>
	<string name="start_game">Start game!</string>
	<string name="name">Your name</string>
	<string name="confirm_psw">Confirm Password</string>
	<string name="username">Username</string>
	<string name="remember">Remember credentials</string>
	<string name="compass">Compass</string>
	<string name="a_compass">Background compass</string>
	<string name="b_nextC">Next Checkpoint</string>
	<string name="t_showmap">Searching position..</string>
</resources>
