<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b9f7c6"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />
    
     <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30sp" />
     
    <EditText
        android:id="@+id/login_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/app_title"
        android:layout_alignRight="@+id/app_title"
        android:layout_below="@+id/t_name"
        android:layout_marginTop="0dp"
        android:ems="15"
        android:inputType="textCapSentences|textAutoCorrect" />

    <TextView
        android:id="@+id/t_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_name"
        android:layout_centerHorizontal="true"
        android:text="@string/psw"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="15sp"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/login_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_name"
        android:layout_alignRight="@+id/login_name"
        android:layout_below="@+id/t_psw"
        android:layout_marginTop="0dp"
        android:ems="15"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/login_psw"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@drawable/loginbutton"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/b_login"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />
    
    <CheckBox
        android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:text="@string/remember"
        android:textSize="15sp" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_below="@+id/remember"
        android:layout_centerHorizontal="true"
        android:background="@drawable/loginbutton"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/b_register"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/t_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_title"
        android:layout_centerHorizontal="true"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="15sp"
        android:paddingTop="10dp" />

</RelativeLayout>