<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b9f7c6"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#bbb9f7c6"
        android:contentDescription="@+id/go"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/t_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/t_mail"
        android:layout_below="@+id/register_mail"
        android:text="@string/psw"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/t_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/register_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/register_psw"
        android:layout_below="@+id/t_name"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/t_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/t_name"
        android:layout_below="@+id/register_name"
        android:text="@string/mail"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/register_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t_mail"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/register_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_mail"
        android:layout_below="@+id/t_psw"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/t_mail"
        android:layout_below="@+id/register_psw"
        android:text="@string/rePsw"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:background="@drawable/loginbutton"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/b_register"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/register_rePsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_name"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:inputType="textPassword" />

</RelativeLayout>