<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:orientation="vertical" >

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"/>

    
    
    <ImageView
        android:contentDescription="@string/a_compass"
        android:id="@+id/compassArea"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/compassarea" />
    
    <ImageView
        android:contentDescription="@string/compass"
        android:id="@+id/imageViewCompass"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/compass" />
    
    <Button
        android:id="@+id/toggle_button_position"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:layout_marginBottom="20dp"
		android:layout_marginLeft="10dp"
		android:background="@drawable/showmapbutton"
		android:textSize="12sp"
		android:text="@string/b_nextC" />
    
    <RelativeLayout
	    android:layout_width="150dp"
	    android:layout_height="70dp"
	    android:layout_centerHorizontal="true"
	    android:layout_alignParentBottom="true"
	    android:layout_marginBottom="20dp"
	    android:background="#B54703" >
          
	    <TextView
	        android:id="@+id/distance"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:background="#ccffffff"
	        android:layout_margin="5dp"
	        android:textAppearance="?android:attr/textAppearanceMedium"  
	        android:gravity="center" 
	        android:textSize="16sp" />
 	</RelativeLayout>
    

</RelativeLayout>